welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:13: error: ';' expected but 'if' found.
	}if (litMessage=="B")
         ^BDRBuggle:23: error: ';' expected but 'if' found.
	}if (litMessage=="X")
         ^BDRBuggle:28: error: ';' expected but 'if' found.
	}if (litMessage=="Y")
         ^BDRBuggle:32: error: ';' expected but 'if' found.
	}if (litMessage=="Z")
         ^